package pers.xf.learn.designpattern.bridgepattern;

public interface IMessage {
    void send();
    void setFlag(String flag);
}
